RESOLVED FIXED226726
REGRESSION(r278391): [SOUP] Test fast/dom/webtiming.html is failing
https://bugs.webkit.org/show_bug.cgi?id=226726
Summary REGRESSION(r278391): [SOUP] Test fast/dom/webtiming.html is failing
Carlos Garcia Campos
Reported 2021-06-07 04:54:36 PDT
We need to set network metrics on response even for non HTTP loads now.
Attachments
Patch (3.25 KB, patch)
2021-06-07 04:57 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2021-06-07 04:57:27 PDT
Carlos Garcia Campos
Comment 2 2021-06-08 00:57:10 PDT
Note You need to log in before you can comment on or make changes to this bug.