REGRESSION(r278391): [SOUP] Test fast/dom/webtiming.html is failing https://bugs.webkit.org/show_bug.cgi?id=226726

Reviewed by Michael Catanzaro.

We need to set network metrics on response even for non HTTP loads now.

Fixes fast/dom/webtiming.html

* NetworkProcess/soup/NetworkDataTaskSoup.cpp:
(WebKit::NetworkDataTaskSoup::resume):
(WebKit::NetworkDataTaskSoup::didSendRequest):
(WebKit::NetworkDataTaskSoup::dispatchDidReceiveResponse):

Canonical link: https://commits.webkit.org/238585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278595 268f45cc-cd09-0410-ab3c-d52691b4dbfc